# zulip_rs

./: Cargo.toml  README.md
src/: client.rs  lib.rs  message.rs  rc.pest  rc.rs
