[package]
name = "zulip_rs"
version = "0.1.0"
authors = ["nukr <nukrs.w@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
reqwest = { version = "0.10.9", features = ["blocking"] }
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
