[package]
name = "zulip_rs"
version = "0.1.5"
authors = ["nukr <nukrs.w@gmail.com>"]
edition = "2018"
description = "Rust library to access the Zulip API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
pest = "2.1.3"
pest_derive = "2.1.0"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
