[package]
name = "zulip_rs"
version = "0.2.0"
authors = ["nukr <nukrs.w@gmail.com>"]
edition = "2018"
description = "Rust library to access the Zulip API"
license = "MIT"
repository = "https://github.com/nukr/zulip_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
pest = "2.1"
pest_derive = "2.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.8"

[dev-dependencies]
httpmock = "0.5.8"
tokio = { version = "1", features = [ "full" ] }
